building model using linear Regression function from scikit learn

--- a/Bike-sharing.ipynb
+++ b/Bike-sharing.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "44dfdfcd-c41f-4ff0-88ec-c3e1f993a12d",
    "metadata": {},
    "outputs": [
@@ -327,7 +327,7 @@
        "(730, 14)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fcf11a17-d70f-4f0e-86bf-13241bd430a0",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "64159c3b-bda0-4cfa-af40-c1c9d2f2afcf",
    "metadata": {},
    "outputs": [
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "3959fff5-2274-4993-92ec-b5476c4a18b7",
    "metadata": {},
    "outputs": [
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "b5dc80c8-81b1-4a88-8fb7-81dc9c07aedc",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "96ca498f-13a8-4256-b974-f9b3644e4865",
    "metadata": {},
    "outputs": [],
@@ -586,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "c999106a-ca01-4b98-8ab0-bc193bed62be",
    "metadata": {},
    "outputs": [
@@ -660,7 +660,7 @@
        "4    True   False   False"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "ff8d5f78-7139-4955-9556-369935fc06ed",
    "metadata": {},
    "outputs": [],
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "8409e660-4fed-4c25-a811-bd7522a2a68a",
    "metadata": {},
    "outputs": [
@@ -750,7 +750,7 @@
        "4         False         False"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "99ddfd59-3ad0-4871-8301-04cb48f86797",
    "metadata": {},
    "outputs": [],
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 15,
    "id": "9dddb9f2-1d1f-44b9-921d-85c64c8783c7",
    "metadata": {},
    "outputs": [
@@ -901,7 +901,7 @@
        "4    False    False    False  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "id": "5499c2d0-7f2d-483a-88ee-0cb0c1ba3938",
    "metadata": {},
    "outputs": [
@@ -1004,7 +1004,7 @@
        "4   False     False   False      True    False      False"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1017,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 17,
    "id": "cd499828-67fc-422f-b438-bdc4bbcf8ad4",
    "metadata": {},
    "outputs": [
@@ -1317,7 +1317,7 @@
        "4   False     False   False      True    False      False  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,7 +1331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 18,
    "id": "909f688a-f767-411f-85f7-fd0bcaaeac5a",
    "metadata": {},
    "outputs": [
@@ -1341,7 +1341,7 @@
        "(730, 30)"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1359,7 +1359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 19,
    "id": "1cf06605-69d2-4fd3-ae50-1c05a426ed34",
    "metadata": {},
    "outputs": [
@@ -1616,7 +1616,7 @@
        "4    False   False     False   False      True    False      False  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1627,7 +1627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 20,
    "id": "07ca1171-33ac-4f04-8988-6bff4888b577",
    "metadata": {},
    "outputs": [
@@ -1637,7 +1637,7 @@
        "(730, 30)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "id": "8a4fa199-754a-46e0-8317-9d554fc1674f",
    "metadata": {},
    "outputs": [
@@ -1914,7 +1914,7 @@
        "482    False   False     False    True     False    False      False  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1929,7 +1929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "045d0ad0-ff30-4fae-96e8-f553e9cf1ce4",
    "metadata": {},
    "outputs": [
@@ -2186,7 +2186,7 @@
        "482    False    False   False     False    True     False    False      False  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2203,7 +2203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 23,
    "id": "6632930f-dcae-4366-9f7b-9de0678e3f80",
    "metadata": {},
    "outputs": [
@@ -2353,7 +2353,7 @@
        "max      1.000000    1.000000  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2380,8 +2380,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "c2fa7fd7-721a-4e5d-9950-18c68e9a33a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_train = bike_df_train.pop('cnt')\n",
+    "X_train = bike_df_train ## assigning all feature variables to X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8ce44fe-4ee7-4808-a73c-c2adf6d723f3",
+   "metadata": {},
+   "source": [
+    "### Building our model\n",
+    "Because the SciKit Learn LinearRegression function is compatible with RFE (a sklearn utility), we will be utilizing it this time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ad8d8ab-7de1-4ddb-a497-3afc3f810d5a",
+   "metadata": {},
+   "source": [
+    "### RFE (Recursive Feature Elimination)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "2545ca16-fec1-4e14-a132-d4ee30f25ae7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Running RFE with the output number of the variable equal to 10\n",
+    "lm = LinearRegression()\n",
+    "lm.fit(X_train, y_train)\n",
+    "\n",
+    "rfe = RFE(estimator=lm, n_features_to_select=10) # running RFE\n",
+    "rfe = rfe.fit(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "2d9cf9e6-6dc5-4085-866f-b30f2904916a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('yr', True, 1),\n",
+       " ('holiday', True, 1),\n",
+       " ('workingday', False, 9),\n",
+       " ('temp', True, 1),\n",
+       " ('atemp', False, 15),\n",
+       " ('hum', True, 1),\n",
+       " ('windspeed', True, 1),\n",
+       " ('spring', True, 1),\n",
+       " ('summer', False, 10),\n",
+       " ('winter', True, 1),\n",
+       " ('weathersit_2', True, 1),\n",
+       " ('weathersit_3', True, 1),\n",
+       " ('month_10', False, 7),\n",
+       " ('month_11', False, 17),\n",
+       " ('month_12', False, 18),\n",
+       " ('month_2', False, 11),\n",
+       " ('month_3', False, 3),\n",
+       " ('month_4', False, 4),\n",
+       " ('month_5', False, 2),\n",
+       " ('month_6', False, 5),\n",
+       " ('month_7', False, 16),\n",
+       " ('month_8', False, 6),\n",
+       " ('month_9', True, 1),\n",
+       " ('Monday', False, 14),\n",
+       " ('Saturday', False, 12),\n",
+       " ('Sunday', False, 8),\n",
+       " ('Thursday', False, 13),\n",
+       " ('Tuesday', False, 19),\n",
+       " ('Wednesday', False, 20)]"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(zip(X_train.columns,rfe.support_,rfe.ranking_))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8648288f-ea59-4a02-b19b-c46a93292ac9",
    "metadata": {},
    "outputs": [],
    "source": []
