added subjective-question and readme file

--- a/Bike-sharing.ipynb
+++ b/Bike-sharing.ipynb
@@ -3080,9 +3080,10 @@
    "metadata": {},
    "source": [
     "\n",
-    "1. Model67 is our final model.\r\n",
-    "2. R-Squared value 78732 and adjusted R-Squared value is 785283.\r\n",
-    "4. All p-values are below 0.05 (Rejecting the NULL hypothesis)\n"
+    "1. Model 7 is our final model.\r\n",
+    "2. R-Squared valu is  0.7872 and adjusted R-Squared value i s0.7853.\r\n",
+    "4. All p-values are below 0.05 (Rejecting the NULL hypothesi\n",
+    "   s)\n"
    ]
   },
   {
